complete responsive cards. fix incorrect left margin on last card when on mobile viewport

--- a/style/index.css
+++ b/style/index.css
@@ -8,20 +8,45 @@ section:first-of-type {
   min-height: 400px;
 }
 .main-title {
-    max-width: 24rem;
+  max-width: 24rem;
   font-size: 3.25rem !important;
 }
-.main-subtitle{
-    max-width: 34rem;
+.main-subtitle {
+  max-width: 34rem;
+  font-size: 1.5rem;
 }
-.card:hover > img{
-  transform: scale(1.05);
+.blue-line {
+  transform: translateX(-11px);
 }
-.card:hover p{
+.dark-section-max {
+  max-width: 80rem;
+}
+.second-subtitle {
+  max-width: 10em;
+  font-size: 2rem;
+}
+.card:hover > img {
+  transform: scale(1.025);
+}
+.card:hover p {
   color: grey;
 }
-.card:hover > img, .card:hover > p{
+.card:hover > img,
+.card:hover > p {
   transition-timing-function: ease-in-out;
-  transition-duration: 400ms;
+  transition-duration: 250ms;
   z-index: 10;
+}
+@media (max-width: 1022px) {
+  .card:nth-child(3) {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  section.row.container-fluid {
+    margin: auto;
+  }
+  .card:nth-child(2) {
+    margin: inherit !important;
+  }
 }
